Implemented react spatial navigation

--- a/src/components/Content/MenuSection/Menu/index.css
+++ b/src/components/Content/MenuSection/Menu/index.css
@@ -4,8 +4,8 @@
   padding-left: 50px;
   padding-top: 15px;
   padding-bottom: 15px;
-  background-color: #141414;
-  color: #ffffff;
+  /* background-color: #141414; */
+  color: #141414;
 }
 
 .card-section {
