--- a/src/components/Sidenav/index.css
+++ b/src/components/Sidenav/index.css
@@ -5,7 +5,7 @@
 /*Icons source*/
 /*<a target="_blank" href="https://icons8.com/icon/i6fZC6wuprSu/home">Home</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>*/
 
-.sidebar {
+.sidenav {
   width: 60px;
   height: 100vh;
   background-color: #141414;
