--- a/src/components/Content/MenuSection/Menu/Card/index.css
+++ b/src/components/Content/MenuSection/Menu/Card/index.css
@@ -4,5 +4,8 @@
   width: 230px;
   height: 170px;
   border-radius: 10px;
-  background-color: #6d6d6e;
+}
+
+.card.active {
+  border: 5px solid black;
 }
