--- a/src/components/Navigation/Content/MenuSection/Menu/index.css
+++ b/src/components/Navigation/Content/MenuSection/Menu/index.css
@@ -1,7 +1,7 @@
+.single-menu-section {
+  overflow: hidden;
+}
+
 .menu {
-  margin-top: 5px;
-  display: block;
-  width: 100%;
-  overflow: scroll;
   white-space: nowrap;
 }
