--- a/src/components/Navigation/Content/MenuSection/Menu/Card/index.css
+++ b/src/components/Navigation/Content/MenuSection/Menu/Card/index.css
@@ -4,7 +4,7 @@
   height: 125px;
   border-radius: 7px;
   box-sizing: border-box;
-  margin-left: 15px;
+  margin-right: 15px;
 }
 
 .card.focused {
