--- a/src/index.css
+++ b/src/index.css
@@ -7,20 +7,7 @@
   font-family: "Roboto", sans-serif;
 }
 
-/* test */
-/* .parent {
-  background-color: red;
-  display: block;
-  width: 100%;
-  overflow-x: scroll;
-  white-space: nowrap;
+.content {
+  width: calc(100% - 60px);
+  margin-left: 60px;
 }
-
-.child {
-  display: inline-block;
-  box-sizing: border-box;
-  width: 250px;
-  height: 150px;
-  background-color: azure;
-  margin-left: 5px;
-} */
